# mav_trajectory_generation

mav_trajectory_generation/: CMakeLists.txt  package.xml
mav_trajectory_generation/src/: polynomial.cpp
mav_visualization/: CMakeLists.txt  package.xml
mav_visualization/include/mav_visualization/: helpers.h  marker_group.h
mav_visualization/src/: hexacopter_marker.cpp  hexacopter_publisher.cpp  marker_group.cpp
