<?xml version="1.0"?>
<package format="2">
  <name>mav_trajectory_generation</name>
  <version>0.0.0</version>
  <description>Polynomial trajectory generation for MAVs.</description>

  <author email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</author>
  <author email="michael.burri@mavt.ethz.ch">Michael Burri</author>
  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <author email="brik@ethz.ch">Rik Bähnemann</author>
  <author email="mpopovic@ethz.ch">Marija Popovic</author>

  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>

  <license>ASL 2.0</license>

  <depend>cmake_modules</depend>
  <depend>mav_msgs</depend>
  <!--depend>nlopt</depend-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
